--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,19 @@
     		<artifactId>jsonic</artifactId>
     		<version>1.3.10</version>
 		</dependency>
+		<!-- Spring Security関連 -->
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-core</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-web</artifactId>
+		</dependency>
+		<dependency>
+   			<groupId>org.springframework.security</groupId>
+  		  	<artifactId>spring-security-config</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
